tests/ui/try_transmute-src-not-intobytes.stable.stderr
error[E0277]: the trait bound `NotZerocopy<AU16>: IntoBytes` is not satisfied
   --> $DIR/try_transmute-src-not-intobytes.rs:16:47
    |
 16 |     let src_not_into_bytes: Result<AU16, _> = try_transmute!(NotZerocopy(AU16(0)));
    |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `IntoBytes` is not implemented for `NotZerocopy<AU16>`
   --> $DIR/../include.rs:15:5
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(IntoBytes)]` to `NotZerocopy<AU16>`
    = help: the following other types implement trait `IntoBytes`:
              ()
              AU16
              AtomicBool
              AtomicI16
              AtomicI32
              AtomicI64
              AtomicI8
              AtomicIsize
              AtomicU16
              AtomicU32
              AtomicU64
              AtomicU8
              AtomicUsize
              Cell<T>
              F32<O>
              F64<O>
              I128<O>
              I16<O>
              I32<O>
              I64<O>
              Isize<O>
              ManuallyDrop<T>
              NonZero<i128>
              NonZero<i16>
              NonZero<i32>
              NonZero<i64>
              NonZero<i8>
              NonZero<isize>
              NonZero<u128>
              NonZero<u16>
              NonZero<u32>
              NonZero<u64>
              NonZero<u8>
              NonZero<usize>
              Option<NonZero<i128>>
              Option<NonZero<i16>>
              Option<NonZero<i32>>
              Option<NonZero<i64>>
              Option<NonZero<i8>>
              Option<NonZero<isize>>
              Option<NonZero<u128>>
              Option<NonZero<u16>>
              Option<NonZero<u32>>
              Option<NonZero<u64>>
              Option<NonZero<u8>>
              Option<NonZero<usize>>
              PhantomData<T>
              ReadOnly<T>
              SliceDst<T, U>
              U128<O>
              U16<O>
              U32<O>
              U64<O>
              Unalign<T>
              UnsafeCell<T>
              Usize<O>
              Wrapping<T>
              [T; N]
              [T]
              __m128
              __m128d
              __m128i
              __m256
              __m256d
              __m256i
              __m512
              __m512bh
              __m512d
              __m512i
              bool
              char
              f32
              f64
              i128
              i16
              i32
              i64
              i8
              isize
              str
              u128
              u16
              u32
              u64
              u8
              usize
note: required by a bound in `try_transmute`
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/src/util/macro_util.rs:512:10
    |
510 | pub fn try_transmute<Src, Dst>(src: Src) -> Result<Dst, ValidityError<Src, Dst>>
    |        ------------- required by a bound in this function
511 | where
512 |     Src: IntoBytes,
    |          ^^^^^^^^^ required by this bound in `try_transmute`
    = note: this error originates in the macro `try_transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
